--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,17 +1,13 @@
 useDynLib(rvalues)
-export(npmle)
-export(tdist)
-export(rvaluesMCMC)
-export(npmixapply)
-export(rvalues)
-export(Valpha)
-export(PostSummaries)
-export(OverlapCurve)
-export(FDRCurve)
-export(TopList)
-export(PostPercentile)
-export(rvalueBoot)
-export(MakeGrid)
-export(mroot)
+export(npmle, tdist, rvaluesMCMC, npmixapply, rvalues, Valpha, 
+       PostSummaries, OverlapCurve, FDRCurve, TopList, PostPercentile,
+       rvalueBoot, MakeGrid, mroot)
 S3method("plot","npmix")
 S3method("print","rvals")
+importFrom(graphics, abline, lines, legend, par, plot)
+importFrom(stats, approxfun, binomial, density, gaussian, integrate,
+           is.stepfun, knots, median, nlminb, pbeta, pf, pgamma, pnorm,
+           poisson, pt, dbeta, qbeta, qgamma, qnorm, quantile, rbeta, 
+           rbinom, rgamma, rnorm, rpois, rt, stepfun, supsmu, uniroot, var)
+importFrom(utils, head)
+
