--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: rvalues
 Type: Package
 Title: R-Values for Ranking in High-Dimensional Settings
 Version: 0.5.1
-Date: 2015-09-18
-Author: Nicholas Henderson and Michael Newton
+Date: 2015-12-15
+Authors@R: c(person("Nicholas", "Henderson", email = "nhenders@stat.wisc.edu", role = "cre"), person("Michael", "Newton", email = "newton@stat.wisc.edu", role = "aut"))
 Maintainer: Nicholas Henderson <nhenders@stat.wisc.edu>
 Imports: graphics, stats, utils
 Description: A collection of functions for computing "r-values" from various kinds of user input such as MCMC output or a list of effect size estimates and associated standard errors. Given a large collection of measurement units, the r-value, r, of a particular unit is a reported percentile that may be interpreted as the smallest percentile at which the unit should be placed in the top r-fraction of units.
